@@ -1,4 +1,10 @@
-#flags needed to link each dependency
+#This Setup file is used by the setup.py script to configure the
+#python extensions. You will likely use the "config.py" which will
+#build a correct Setup file for you based on your system settings.
+#If not, the format is simple enough to edit by hand. First change
+#the needed commandline flags for each dependency, then comment out
+#any unavailable optional modules in the first optional section.
+
 
 #--StartConfig
 SDL = -I/usr/include/SDL -D_REENTRANT -lSDL
@@ -9,7 +15,27 @@ SMPEG = -lsmpeg
 #--EndConfig
 
 
-#base extensions (need sdl only, all of them needed)
+#the following modules are optional. you will want to compile
+#everything you can, but you can ignore ones you don't have
+#dependencies for, just comment them out
+
+font src/font.c $(SDL) $(FONT)
+image src/image.c $(SDL) $(IMAGE)
+mixer src/mixer.c $(SDL) $(MIXER)
+mixer_music src/music.c $(SDL) $(MIXER)
+
+
+
+#the following modules are also optional, but only require
+#python dependencies. the setup script can determine if these
+#are available at runtime, no need to change these
+
+surfarray src/surfarray.c $(SDL)    #requires Numeric
+
+
+
+#these modules are required for pygame to run. they only require
+#SDL as a dependency. these should not be altered
 
 base src/base.c $(SDL)
 cdrom src/cdrom.c $(SDL)
@@ -25,20 +51,9 @@ time src/time.c $(SDL)
 joystick src/joystick.c $(SDL)
 
 
-#the following modules are optional. you will want to compile
-#everything you can, but you can ignore ones you don't have
-#dependencies for, just comment them out
-
-surfarray src/surfarray.c $(SDL)
-font src/font.c $(SDL) $(FONT)
-image src/image.c $(SDL) $(IMAGE)
-mixer src/mixer.c $(SDL) $(MIXER)
-mixer_music src/music.c $(SDL) $(MIXER)
-
-
 
 #the following are placeholders. setup.py can use them to help
 #auto-copy needed DLLs into the pygame installation folder.
-#you can simply ignore these lines under other OS, no need to
+#you can simply ignore these lines under non-windows, no need to
 #comment out.
 COPYLIB_smpeg $(SMPEG)
